--- a/404.html
+++ b/404.html
@@ -5,5 +5,5 @@ class: missing
 ---
 <section>
   <h1>Hmm, that seems to be missing.</h1>
-  <p>Try <a href="/">going back home</a>. Otherwise, feel free to <a href="{{ site.twitter }}">reach out on Twitter</a>.</p>
+  <p>Try <a href="/">going back home</a>. Otherwise, feel free to <a href="{{ site.mastodon }}">reach out on Mastodon</a>.</p>
 </section>
